[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/ground/Grass.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Zombie/skeleton-move_5.png" type="Texture" id=2]
[ext_resource path="res://Assets/Brown-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/bulletDark1.png" type="Texture" id=4]
[ext_resource path="res://Music/bensound-creativeminds.wav" type="AudioStream" id=5]
[ext_resource path="res://Music/zapsplat_multimedia_button_click_007_53868.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/ground/GrassLight.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=8]
[ext_resource path="res://Assets/ground/Dirt.jpg" type="Texture" id=9]
[ext_resource path="res://Assets/ground/20483.jpg" type="Texture" id=10]
[ext_resource path="res://Assets/ground/Rock.jpg" type="Texture" id=11]
[ext_resource path="res://Assets/ground/Gravel.png" type="Texture" id=12]
[ext_resource path="res://Assets/Red2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Green1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Grey-removebg-preview.png" type="Texture" id=15]
[ext_resource path="res://Assets/Purple-removebg-preview.png" type="Texture" id=16]
[ext_resource path="res://Assets/Blue1.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/bulletLarge.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/bulletInc.png" type="Texture" id=19]
[ext_resource path="res://Assets/Black1-removebg-preview.png" type="Texture" id=20]
[ext_resource path="res://Assets/White-removebg-preview.png" type="Texture" id=21]
[ext_resource path="res://Assets/Orange-removebg-preview.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 960, 540 )
frames = SubResource( 1 )

[node name="Objects" type="Node2D" parent="."]

[node name="RightTank" type="AnimatedSprite" parent="Objects"]
position = Vector2( 1689.05, 842.109 )
rotation = 2.35619
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 2

[node name="Bullet" type="AnimatedSprite" parent="Objects/RightTank"]
position = Vector2( -1.00208, 111.754 )
rotation = 3.14159
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
frame = 2

[node name="LeftTank" type="AnimatedSprite" parent="Objects"]
position = Vector2( 228.558, 831.001 )
rotation = 3.92699
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
frame = 2

[node name="Bullet" type="AnimatedSprite" parent="Objects/LeftTank"]
position = Vector2( -0.915649, 110.466 )
rotation = 3.14159
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
frame = 2

[node name="skeleton-move_5" type="Sprite" parent="Objects"]
position = Vector2( 930.27, 307.9 )
rotation = 1.5708
scale = Vector2( 1.9, 1.9 )
texture = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SFXButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
